--- a/src/components/location/slideshow/_slideshow.module.scss
+++ b/src/components/location/slideshow/_slideshow.module.scss
@@ -19,8 +19,8 @@
         color: $white;
         position: absolute;
         bottom: 25px;
-        position: absolute;
-
+        left: 50%;
+        transform: translateX(-50%);
     }
 
     &__arrow {
