--- a/src/pages/location/_location.scss
+++ b/src/pages/location/_location.scss
@@ -35,6 +35,7 @@
             display: flex;
             flex-direction: row;
             justify-content: flex-end;
+            gap: 10px;
             
             &__name {
                 @include font-style(18px, 500);
@@ -51,8 +52,20 @@
         }
 
         .rating {
-            width: 196px;
-            height: 36px;
+            @include display-flex(row, flex-end);
+            gap: 10px;
+            margin-top: 27px;
+
+            .active-star {
+                font-size: 24px;
+                color: $primary-color;
+            }
+
+            .inactive-star {
+                font-size: 24px;
+                color: $grey-star;
+            }
+
         }
     }
 }
