--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -20,11 +20,11 @@
   align-items: center;
   gap: 57px;
 }
-.header__nav a {
+.header__nav__nav-link {
   text-decoration: none;
   color: #000000;
 }
-.header__nav a:hover {
+.header__nav__nav-link.active {
   text-decoration: underline;
 }
 
@@ -161,7 +161,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
 }
 .info-locations .info-tags h1 {
   font-size: 36px;
