--- a/src/components/banner/_banner.module.scss
+++ b/src/components/banner/_banner.module.scss
@@ -34,7 +34,7 @@
         &__text{
             @include font-style(48px, 700);
             color: $white;
-            opacity: 1;
+            text-shadow: 1px 0 0 $black, 0 -1px 0 $black, 0 1px 0 $black, -1px 0 0 $black;
         }
     }
 }
