--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -94,6 +94,18 @@
 .card {
   width: 340px;
   position: relative;
+  border-radius: 10px;
+}
+.card::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(10, 10, 10, 0) 42%, rgba(4, 4, 4, 0.2) 99.99%, rgba(0, 0, 0, 0.5) 100%);
+  pointer-events: none;
+  border-radius: 10px;
 }
 .card__img {
   width: 100%;
@@ -103,6 +115,7 @@
      object-fit: cover;
   -o-object-position: center;
      object-position: center;
+  display: block;
 }
 .card__text {
   font-size: 18px;
