--- a/src/components/location-card/_locationCard.module.scss
+++ b/src/components/location-card/_locationCard.module.scss
@@ -4,18 +4,32 @@
 .card {
     width: 340px;
     position: relative;
-    // background: linear-gradient(180deg,
-    //             rgba(255, 255, 255, 0.00) 0%,
-    //             rgba(10, 10, 10, 0.00) 42%,
-    //             rgba(4, 4, 4, 0.20) 99.99%,
-    //             rgba(0, 0, 0, 0.50) 100%);
+    border-radius: 10px;
+
+    &::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(180deg,
+                rgba(255, 255, 255, 0.00) 0%,
+                rgba(10, 10, 10, 0.00) 42%,
+                rgba(4, 4, 4, 0.20) 99.99%,
+                rgba(0, 0, 0, 0.50) 100%);
+            pointer-events: none;
+            border-radius: 10px;
+        }
     
     &__img{
         width: 100%;
         height: 340px;
         border-radius: 10px;
         object-fit: cover;
-        object-position: center
+        object-position: center;
+        display: block;
+
     }
 
     &__text{
