--- a/src/pages/home/_home.scss
+++ b/src/pages/home/_home.scss
@@ -11,7 +11,7 @@
     border-radius: 25px;
     background-color: $light-grey;
     padding: 56px 50px 43px 50px;
-    margin-top: 50px;
+    margin: 50px 0;
 
     a{
         width: calc(33% - 220px);
