--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -94,7 +94,6 @@
 .card {
   width: 340px;
   position: relative;
-  border-radius: 10px;
 }
 .card::before {
   content: "";
@@ -170,13 +169,16 @@
 }
 
 /*****Colors*****/
-.info-locations {
+.location-page {
+  margin-bottom: 50px;
+}
+.location-page .info-locations {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-start;
 }
-.info-locations .info-tags h1 {
+.location-page .info-locations .info-tags h1 {
   font-size: 36px;
   font-weight: 500;
   font-family: "Montserrat", sans-serif;
@@ -184,13 +186,13 @@
   color: #FF6060;
   margin-top: 30px;
 }
-.info-locations .info-tags p {
+.location-page .info-locations .info-tags p {
   font-size: 18px;
   font-weight: 500;
   font-family: "Montserrat", sans-serif;
   margin: 0 0 20px 0;
 }
-.info-locations .info-tags span {
+.location-page .info-locations .info-tags span {
   font-size: 14px;
   font-weight: 700;
   font-family: "Montserrat", sans-serif;
@@ -200,16 +202,16 @@
   background-color: #FF6060;
   color: #FFFFFF;
 }
-.info-locations .host-rating {
+.location-page .info-locations .host-rating {
   padding: 24px 3px 27px 10px;
 }
-.info-locations .host-rating .host {
+.location-page .info-locations .host-rating .host {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
   gap: 10px;
 }
-.info-locations .host-rating .host__name {
+.location-page .info-locations .host-rating .host__name {
   font-size: 18px;
   font-weight: 500;
   font-family: "Montserrat", sans-serif;
@@ -220,11 +222,11 @@
   text-align: right;
   color: #FF6060;
 }
-.info-locations .host-rating .host img {
+.location-page .info-locations .host-rating .host img {
   width: 64px;
   border-radius: 50px;
 }
-.info-locations .host-rating .rating {
+.location-page .info-locations .host-rating .rating {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
@@ -232,16 +234,15 @@
   gap: 10px;
   margin-top: 27px;
 }
-.info-locations .host-rating .rating .active-star {
+.location-page .info-locations .host-rating .rating .active-star {
   font-size: 24px;
   color: #FF6060;
 }
-.info-locations .host-rating .rating .inactive-star {
+.location-page .info-locations .host-rating .rating .inactive-star {
   font-size: 24px;
   color: #E3E3E3;
 }
-
-.collapse-location {
+.location-page .collapse-location {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -249,10 +250,10 @@
   gap: 76px;
   padding-top: 24px;
 }
-.collapse-location .collapse-item {
+.location-page .collapse-location .collapse-item {
   width: calc(100% - 76px);
 }
-.collapse-location .collapse-item__heading {
+.location-page .collapse-location .collapse-item__heading {
   font-size: 18px;
   font-weight: 700;
   font-family: "Montserrat", sans-serif;
@@ -265,7 +266,19 @@
   border-radius: 10px;
   padding: 10px;
 }
-.collapse-location .collapse-item__content {
+.location-page .collapse-location .collapse-item__heading .collapse-icon {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  transition: transform 0.3s ease-in-out;
+}
+.location-page .collapse-location .collapse-item__heading .collapse-icon.open {
+  transform: rotate(-180deg);
+}
+.location-page .collapse-location .collapse-item__heading .collapse-icon.close {
+  transform: rotate(0deg);
+}
+.location-page .collapse-location .collapse-item__content {
   font-size: 18px;
   font-weight: 400;
   font-family: "Montserrat", sans-serif;
@@ -292,7 +305,7 @@
   border-radius: 25px;
   background-color: #F6F6F6;
   padding: 56px 50px 43px 50px;
-  margin-top: 50px;
+  margin: 50px 0;
 }
 .location-list a {
   width: calc(33% - 220px);
@@ -305,7 +318,7 @@
   justify-content: center;
   align-items: center;
   gap: 30px;
-  padding-top: 24px;
+  margin: 38px 0;
 }
 .collapse-about .collapse-item {
   width: 80%;
@@ -332,6 +345,48 @@
   border-radius: 5px;
   background-color: #F6F6F6;
 }
+.collapse-about .collapse-item .collapse-icon {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  transition: transform 0.3s ease-in-out;
+}
+.collapse-about .collapse-item .collapse-icon.open {
+  transform: rotate(-180deg);
+}
+.collapse-about .collapse-item .collapse-icon.close {
+  transform: rotate(0deg);
+}
+
+/*****Colors*****/
+.error-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 139px;
+  margin: 89px 0 139px 0;
+}
+.error-page__title {
+  font-size: 288px;
+  font-weight: 700;
+  font-family: "Montserrat", sans-serif;
+  color: #FF6060;
+  margin: 0;
+}
+.error-page__subtitle {
+  font-size: 36px;
+  font-weight: 500;
+  font-family: "Montserrat", sans-serif;
+  color: #FF6060;
+  margin: 0;
+}
+.error-page__link {
+  font-size: 18px;
+  font-weight: 500;
+  font-family: "Montserrat", sans-serif;
+  color: #000000;
+}
 
 body {
   font-family: "Montserrat";
@@ -342,7 +397,7 @@ body {
   box-sizing: border-box;
 }
 body main {
-  padding: 50px 100px 50px 100px;
+  padding: 50px 100px 0px 100px;
 }
 body main h1, body main h2, body main h3, body main h4 {
   margin: 0;
