--- a/src/pages/location/_location.scss
+++ b/src/pages/location/_location.scss
@@ -1,100 +1,137 @@
 @import '../../assets/styles/mixins';
 @import '../../assets/styles/variables';
 
-.info-locations {
-    @include display-flex(row, space-between, flex-start);
+.location-page {
+    margin-bottom: 50px;
 
-    .info-tags {
-        h1 {
-            @include font-style(36px, 500);
-            line-height: 51px;
-            color: $primary-color;
+    .info-locations {
+        @include display-flex(row, space-between, flex-start);
 
-            margin-top: 30px;
-        }
+        .info-tags {
+            h1 {
+                @include font-style(36px, 500);
+                line-height: 51px;
+                color: $primary-color;
 
-        p {
-            @include font-style(18px, 500);
-            margin: 0 0 20px 0;
-        }
+                margin-top: 30px;
+            }
 
-        span {
-            @include font-style(14px, 700);
-            padding: 5px 30px;
-            margin-right: 10px;
-            border-radius: 10px;
-            background-color: $primary-color;
-            color: $white;
-        }
-    }
-
-    .host-rating {
-        padding: 24px 3px 27px 10px;
-
-        .host {
-            display: flex;
-            flex-direction: row;
-            justify-content: flex-end;
-            gap: 10px;
-            
-            &__name {
+            p {
                 @include font-style(18px, 500);
-                @include display-flex(column,center, flex-end);
-                text-align: right;
-                color: $primary-color;
+                margin: 0 0 20px 0;
             }
 
-            img {
-                width: 64px;
-                border-radius: 50px;
-
+            span {
+                @include font-style(14px, 700);
+                padding: 5px 30px;
+                margin-right: 10px;
+                border-radius: 10px;
+                background-color: $primary-color;
+                color: $white;
             }
         }
 
-        .rating {
-            @include display-flex(row, flex-end);
-            gap: 10px;
-            margin-top: 27px;
+        .host-rating {
+            padding: 24px 3px 27px 10px;
 
-            .active-star {
-                font-size: 24px;
-                color: $primary-color;
+            .host {
+                display: flex;
+                flex-direction: row;
+                justify-content: flex-end;
+                gap: 10px;
+
+                &__name {
+                    @include font-style(18px, 500);
+                    @include display-flex(column, center, flex-end);
+                    text-align: right;
+                    color: $primary-color;
+                }
+
+                img {
+                    width: 64px;
+                    border-radius: 50px;
+
+                }
             }
 
-            .inactive-star {
-                font-size: 24px;
-                color: $grey-star;
-            }
+            .rating {
+                @include display-flex(row, flex-end);
+                gap: 10px;
+                margin-top: 27px;
 
+                .active-star {
+                    font-size: 24px;
+                    color: $primary-color;
+                }
+
+                .inactive-star {
+                    font-size: 24px;
+                    color: $grey-star;
+                }
+
+            }
         }
     }
-}
 
-.collapse-location {
-    @include display-flex(row, space-between, flex-start);
-    gap: 76px; 
-    padding-top: 24px;
+    .collapse-location {
+        @include display-flex(row, space-between, flex-start);
+        gap: 76px;
+        padding-top: 24px;
 
-    .collapse-item {
-        width: calc(100% - 76px);
-        
-        &__heading {
-            @include font-style(18px, 700);
-            @include display-flex(row, space-between);
-            color: white; 
-            background-color: $primary-color;
-            border-radius: 10px; 
-            padding: 10px;
-        }
+        .collapse-item {
+            width: calc(100% - 76px);
 
-        &__content {
-            @include font-style(18px, 400);
-            @include display-flex(column, flex-start, flex-start);
-            line-height: 25px;
-            padding: 16px 20px 20px 20px;
-            margin: 0; 
-            border-radius: 5px;
-            background-color: $light-grey;
+            &__heading {
+                @include font-style(18px, 700);
+                @include display-flex(row, space-between);
+                color: white;
+                background-color: $primary-color;
+                border-radius: 10px;
+                padding: 10px;
+
+                .collapse-icon {
+                    display: flex;
+                    align-items: center;
+                    cursor: pointer;
+                    transition: transform 0.3s ease-in-out;
+
+                    &.open {
+                        transform: rotate(-180deg);
+                    }
+
+                    &.close {
+                        transform: rotate(0deg);
+                    }
+                }
+            }
+
+            &__content {
+                @include font-style(18px, 400);
+                @include display-flex(column, flex-start, flex-start);
+                line-height: 25px;
+                padding: 16px 20px 20px 20px;
+                margin: 0;
+                border-radius: 5px;
+                background-color: $light-grey;
+                // transition: opacity 0.5s ease, transform 0.5s ease;
+                // opacity: 0;
+                // transform: translateY(-10px);
+                // height: 0;
+                // overflow: hidden;
+
+                // &.open {
+                //     opacity: 1;
+                //     transform: translateY(0);
+                //     height: auto;
+                // }
+
+                // &.close {
+                //     opacity: 0;
+                //     transform: translateY(-10px);
+                //     height: 0;
+                // display: none;
+                // }
+            }
         }
     }
 }
