--- a/src/components/banner/_banner.scss
+++ b/src/components/banner/_banner.scss
@@ -7,15 +7,15 @@
     position: relative;
     border-radius: 25px;
     overflow: hidden;
-    
-    &__img{
+
+    &__img {
         width: 100%;
         height: 100%;
         object-fit: cover;
         object-position: center;
     }
 
-    &__overlay{
+    &__overlay {
         @include display-flex;
         width: 100%;
         height: 100%;
@@ -27,14 +27,22 @@
             background-color: rgba(0, 0, 0, 0.6);
         }
 
-        &__about-page{
+        &__about-page {
             background-color: rgba(0, 0, 0, 0.3);
         }
 
-        &__text{
+        &__text {
             @include font-style(48px, 700);
             color: $white;
             text-shadow: 1px 0 0 $black, 0 -1px 0 $black, 0 1px 0 $black, -1px 0 0 $black;
+
+            /************Media query mobile************/
+            @media screen and (max-width: 768px) {
+                text-align: left;
+                font-size: 24px;
+                font-weight: 700;
+                text-shadow: none;
+            }
         }
     }
 }
