--- a/src/components/location-card/_locationCard.scss
+++ b/src/components/location-card/_locationCard.scss
@@ -19,7 +19,7 @@
                 rgba(0, 0, 0, 0.50) 100%);
             pointer-events: none;
             border-radius: 10px;
-        }
+    }
     
     &__img{
         width: 100%;
@@ -39,5 +39,13 @@
         position: absolute;
         bottom: 0px;
         left: 0px;
+    }
+}
+
+/*********************Media query mobile**********************/
+@media screen and (max-width: 768px) {
+    .card__img {
+        width: 100%;
+        height: auto;
     }
 }
