--- a/src/components/banner/_banner.scss
+++ b/src/components/banner/_banner.scss
@@ -35,14 +35,43 @@
             @include font-style(48px, 700);
             color: $white;
             text-shadow: 1px 0 0 $black, 0 -1px 0 $black, 0 1px 0 $black, -1px 0 0 $black;
+        }
+    }
+}
 
-            /************Media query mobile************/
-            @media screen and (max-width: 768px) {
-                text-align: left;
+
+/*******Media Query Tablet*******/
+@media screen and (max-width: 1024px) {
+    .banner__overlay__text {
+        font-size: 32px;
+        font-weight: 700;
+    }
+}
+
+/************Media query mobile************/
+@media screen and (max-width: 768px) {
+    .banner {
+        height: 111px;
+        border-radius: 10px;
+
+        &__overlay {
+            &__text {
                 font-size: 24px;
                 font-weight: 700;
                 text-shadow: none;
             }
+        }
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .banner__overlay {
+        justify-content: flex-start;
+        padding-left: 16px;
+
+
+        &__text {
+            white-space: pre-wrap;
         }
     }
 }
