--- a/src/components/collapseItem/_collapse-item.scss
+++ b/src/components/collapseItem/_collapse-item.scss
@@ -11,6 +11,8 @@
         background-color: $primary-color;
         border-radius: 10px;
         padding: 10px;
+        position: relative;
+        z-index: 1;
 
         .collapse-icon {
             display: flex;
@@ -36,23 +38,27 @@
         margin: 0;
         border-radius: 5px;
         background-color: $light-grey;
-        // transition: opacity 0.5s ease, transform 0.5s ease;
-        // opacity: 0;
-        // transform: translateY(-10px);
-        // height: 0;
-        // overflow: hidden;
 
-        // &.open {
-        //     opacity: 1;
-        //     transform: translateY(0);
-        //     height: auto;
-        // }
+        opacity: 0;
+        max-height: 0;
+        overflow: hidden;
+        position: relative;
+        z-index: 0;
 
-        // &.close {
-        //     opacity: 0;
-        //     transform: translateY(-10px);
-        //     height: 0;
-        // display: none;
-        // }
+        &.open {
+            opacity: 1;
+            max-height: fit-content;
+            margin-bottom: 0px;
+            transform: translateY(0);
+            transition: max-height 0.5s ease, margin-bottom 0.5s ease, opacity 0.4s ease 0.15s, transform 0.2s ease 0.15s;
+        }
+
+        &.close {
+            opacity: 0;
+            max-height: 0;
+            margin-bottom: -35px;
+            transform: translateY(-50px);
+            transition: max-height 0.5s ease, margin-bottom 0.5s ease, opacity 0.5s ease, transform 0.5s ease;
+        }
     }
 }
