--- a/src/components/location-card/_locationCard.scss
+++ b/src/components/location-card/_locationCard.scss
@@ -2,26 +2,28 @@
 @import '../../assets/styles/variables';
 
 .card {
-    width: 340px;
+    width: 100%;
+    max-width: 340px;
+    height: auto;
     position: relative;
 
     &::before {
-            content: "";
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(180deg,
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(180deg,
                 rgba(255, 255, 255, 0.00) 0%,
                 rgba(10, 10, 10, 0.00) 42%,
                 rgba(4, 4, 4, 0.20) 99.99%,
                 rgba(0, 0, 0, 0.50) 100%);
-            pointer-events: none;
-            border-radius: 10px;
+        pointer-events: none;
+        border-radius: 10px;
     }
-    
-    &__img{
+
+    &__img {
         width: 100%;
         height: 340px;
         border-radius: 10px;
@@ -31,8 +33,9 @@
 
     }
 
-    &__text{
+    &__text {
         @include font-style(18px, 700);
+        line-height: 25px;
         width: calc(100% - 40px);
         color: $white;
         padding: 0 20px 20px 20px;
@@ -42,10 +45,25 @@
     }
 }
 
-/*********************Media query mobile**********************/
+/****************Media query tablet******************/
+@media screen and (max-width: 1024px) {
+    .card {
+        max-width: none;
+    }
+}
+
+/*****************Media query mobile********************/
 @media screen and (max-width: 768px) {
-    .card__img {
+    .card {
         width: 100%;
-        height: auto;
+
+        &__img {
+            width: 100%;
+            height: 225px;
+        }
+
+        &__text {
+            padding: 0 20px 15px 20px;
+        }
     }
 }
