--- a/src/pages/home/_home.scss
+++ b/src/pages/home/_home.scss
@@ -14,22 +14,26 @@
     margin: 50px 0;
 
     a {
-        width: calc(33% - 220px);
+        width: 100%;
     }
 }
 
 /*********************Media query mobile**********************/
+@media screen and (max-width: 1024px) {
+    .location-list {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 40px;
+        background-color: $white;
+        padding: 0;
+        margin: 40px 0;
+    }
+}
+
 @media screen and (max-width: 768px) {
     .location-list {
         @include display-flex(column);
         gap: 20px;
-        background-color: $white;
-        padding: 0;
         margin-top: 22px;
         margin-bottom: 27px;
-
-        a{
-            width: 100%;
-        }
     }
 }
