Responsive About page ok

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -11,7 +11,7 @@ body {
 
         /**********Media query tablet***********/
         @media screen and (max-width: 1024px) {
-            padding: 30px 40px 0 40px;
+            padding: 0 40px;
         }
 
         /**********Media query mobile***********/
