--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -26,6 +26,17 @@
     }
 }
 
+/****************Media query tablet*****************/
+@media screen and (max-width: 1024px) {
+    .header {
+        padding: 40px;
+
+        &__logo {
+            width: 145px;
+            height: 46px;
+        }
+    }
+}
 
 /****************Media query mobile*****************/
 @media screen and (max-width: 768px) {
