--- a/src/pages/about/_about.scss
+++ b/src/pages/about/_about.scss
@@ -16,3 +16,42 @@
         }
     }
 }
+
+/****************Media query tablet*****************/
+@media screen and (max-width: 1024px) {
+    .collapse-item {
+
+        &__heading {
+            @include font-style(18px, 700);
+            line-height: 25px;
+            border-radius: 5px;
+        }
+
+        &__content {
+            @include font-style(18px, 400);
+            line-height: 25px;
+        }
+    }
+}
+
+/****************Media query mobile*****************/
+@media screen and (max-width: 768px) {
+    .collapse-about {
+        gap: 20px;
+        margin: 19px 0;
+
+        .collapse-item {
+            width: 100%;
+
+            &__heading {
+                @include font-style(13px, 700);
+                line-height: 18px;
+            }
+
+            &__content {
+                @include font-style(13px, 400);
+                line-height: 17px;
+            }
+        }
+    }
+}
