--- a/src/pages/about/_about.scss
+++ b/src/pages/about/_about.scss
@@ -12,25 +12,28 @@
         &__heading {
             @include font-style(24px, 700);
             border-radius: 5px;
-            padding: 9px 24px 9px 15px;
+
         }
     }
 }
 
 /****************Media query tablet*****************/
 @media screen and (max-width: 1024px) {
-    .collapse-item {
+    .collapse-about {
+        .collapse-item {
 
-        &__heading {
-            @include font-style(18px, 700);
-            line-height: 25px;
-            border-radius: 5px;
+            &__heading {
+                @include font-style(18px, 700);
+                line-height: 25px;
+                border-radius: 5px;
+            }
+
+            &__content {
+                @include font-style(18px, 400);
+                line-height: 25px;
+            }
         }
 
-        &__content {
-            @include font-style(18px, 400);
-            line-height: 25px;
-        }
     }
 }
 
@@ -45,7 +48,8 @@
 
             &__heading {
                 @include font-style(13px, 700);
-                line-height: 18px;
+                line-height: 0px;
+                color: black;
             }
 
             &__content {
