--- a/src/pages/location/_location.scss
+++ b/src/pages/location/_location.scss
@@ -17,3 +17,54 @@
         gap: 76px;
     }
 }
+
+// /****************Media query tablet*****************/
+// @media screen and (max-width: 1024px) {
+// .location-page {
+//         margin-bottom: 50px;
+
+//         .info-locations {
+//             @include display-flex(row, space-between, flex-start);
+
+//             .host-rating {
+//                 padding: 24px 3px 27px 10px;
+//             }
+//         }
+
+//         .collapse-location {
+//             @include display-flex(row, space-between, flex-start);
+//             gap: 76px;
+//         }
+//     }
+// }
+
+
+/****************Media query mobile*****************/
+@media screen and (max-width: 768px) {
+    .location-page {
+        margin-bottom: 27px;
+        box-sizing: border-box;
+
+        .info-locations {
+            @include display-flex(column, flex-start, flex-start);
+            width: 100%;
+            gap: 16px;
+
+            &__location{
+                width: 100%;
+            }
+
+            .host-rating {
+                @include display-flex(row-reverse, space-between);
+                width: 100%;
+                padding: 0;
+            }
+        }
+
+        .collapse-location {
+            @include display-flex(column);
+            gap: 20px;
+            margin-top: 13px;
+        }
+    }
+}
