--- a/src/components/collapseItem/_collapse-item.scss
+++ b/src/components/collapseItem/_collapse-item.scss
@@ -96,10 +96,11 @@
 
         &__heading {
             @include font-style(13px, 700);
+            line-height: 10px;
             border-radius: 5px;
 
             &__title {
-                padding: 9px 0px 9px 10px;
+                padding: 10px 0px 10px 10px;
             }
 
             &__icon-content {
@@ -116,6 +117,10 @@
         &__content {
             @include font-style(13px, 400);
             line-height: 17px;
+
+            &__text {
+                padding: 13px 20px 20px 20px;
+            }
         }
     }
 }
