--- a/src/components/location/host/_host.scss
+++ b/src/components/location/host/_host.scss
@@ -20,3 +20,22 @@
 
     }
 }
+
+/****************Media query tablet*****************/
+@media screen and (max-width: 1024px) {}
+
+/****************Media query mobile*****************/
+@media screen and (max-width: 768px) {
+.host {
+
+        &__name {
+            @include font-style(12px, 500);
+        }
+
+        img {
+            width: 32px;
+            border-radius: 50px;
+
+        }
+    }
+}
