Vérification indentation/projet global

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -9,7 +9,7 @@ body {
     main {
         padding: 50px 100px 0px 100px;
 
-        /**********Media query tablet***********/
+        /**********Media query tablet/laptop***********/
         @media screen and (max-width: 1024px) {
             padding: 0 40px;
         }
