--- a/src/components/footer/_footer.scss
+++ b/src/components/footer/_footer.scss
@@ -19,7 +19,8 @@
     }
 }
 
-/*******Media Query Tablet*******/
+
+/*******Media query tablet/laptop*******/
 @media screen and (max-width: 1024px) {
     .footer {
         p {
