--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -26,7 +26,8 @@
     }
 }
 
-/****************Media query tablet*****************/
+
+/****************Media query tablet/laptop*****************/
 @media screen and (max-width: 1024px) {
     .header {
         padding: 40px;
