--- a/src/components/location-card/_locationCard.scss
+++ b/src/components/location-card/_locationCard.scss
@@ -30,7 +30,6 @@
         object-fit: cover;
         object-position: center;
         display: block;
-
     }
 
     &__text {
@@ -45,7 +44,8 @@
     }
 }
 
-/****************Media query tablet******************/
+
+/****************Media query tablet/laptop******************/
 @media screen and (max-width: 1024px) {
     .card {
         max-width: none;
